syntax = "proto3";

option csharp_namespace = "AuthRequest";

package auth;

service AuthService {
  rpc Login (LoginData) returns (TokenData);
}

message LoginData {
  string email = 1;
  string password = 2;
}

message TokenData {
  string token = 1;
  enum Status {
    NONE = 0;
    SUCCESS = 1;
    FAILED = 2;
  }
  Status status = 2;
}